- Switch to `Microsoft.NET.Sdk.Web` to align with web project standards - Add configurations for `SmtpServer` message and logging paths - Replace `Seq` with updated logging configuration in `appsettings.Development.json` - Update deployment profiles with `nlgrn-web01t` configuration - Use `ILogger` alias consistently across classes

--- a/src/Papercut.Service/appsettings.Development.json
+++ b/src/Papercut.Service/appsettings.Development.json
@@ -1,12 +1,6 @@
 {
   "Serilog": {
-    "Using":  [ "Serilog.Sinks.Seq" ],
-    "WriteTo": [
-      {
-        "Name": "Seq",
-        "Args": { "serverUrl": "http://localhost:5341" }
-      }
-    ],
+   
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
@@ -16,6 +10,11 @@
     }
   },
   "AllowedHosts": "*",
-  
+  "SmtpServer": {
+    "IP": "Any",
+    "Port": 25,
+    "MessagePath": "C:\\temp\\papercut\\Incoming",
+    "LoggingPath": "C:\\temp\\papercut\\Logs"
+  },
   "Urls": "http://localhost:37408"  
 }
