--- a/src/Papercut.Service/appsettings.Production.json
+++ b/src/Papercut.Service/appsettings.Production.json
@@ -1,8 +1,10 @@
 {
-  "Urls": "http://0.0.0.0:8080",
+  "Urls": "https://papercut.symerestest.com",
 
   "SmtpServer": {
     "IP": "Any",
-    "Port": 2525
+    "Port": 25,
+    "MessagePath": "C:\\temp\\papercut\\Incoming",
+    "LoggingPath": "C:\\temp\\papercut\\Logs"
   }
 }
