--- a/src/Papercut.Service/Papercut.Service.csproj
+++ b/src/Papercut.Service/Papercut.Service.csproj
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<OutputType>exe</OutputType>
-		<OutputTypeEx>exe</OutputTypeEx>
-		<DebugType>portable</DebugType>
+	
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ApplicationIcon>icons\Papercut-icon.ico</ApplicationIcon>
-		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	
 	</PropertyGroup>
 	<ItemGroup>
 		<EmbeddedResource Include="Web\Assets\**" />
@@ -19,11 +17,7 @@
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
-	<ItemGroup>
-		<Content Include="electron.manifest.json">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
 		<PackageReference Include="AutofacSerilogIntegration" Version="5.0.0" />
